--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,13 @@ readme = "README.md"
 packages = [{include = "lean_lite", from = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8.1"
 alpaca-py = "^0.35.0"
 websocket-client = "^1.6.0"
 numpy = "^1.24.0"
 pandas = "^2.0.0"
 asyncio = "^3.4.3"
+websocket = "^0.2.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
